--- a/src/index.html
+++ b/src/index.html
@@ -194,6 +194,33 @@
             </div>
         </section>
 
+        <section class="projects">
+            <div class="image-project-grid">
+                <h6 class="info-font middle-c item0" style="font-size: 35px">Наши проекты</h6>
+                <div class="image-project-item item1"><img src="../images/projects/Basket.jpg" alt="Basketball court project"></div>
+                <div class="image-project-name-left info-font light-c item1text">
+                    <h6 class="image-project-name info-font light-c">Баскетбольное поле</h6>
+                    <p class="image-project-description info-font light-c">Игра в баскетбол. Важны не только физическая активность, но и слаженные действия команды</p>
+                </div>
+                <div class="image-project-item item2"><img src="../images/projects/ChemLab.jpg" alt="Chemical laboratory project"></div>
+                <div class="item2text">
+                    <h6 class="image-project-name info-font light-c">Химическая лаборатория</h6>
+                    <p class="image-project-description info-font light-c">Образовательный проект, направленный на создание интерактивной среды обучения школьников и студентов</p>
+                </div>
+                <div class="image-project-item item3"><img src="../images/projects/NewVirtMuz.png" alt="Virtual museum project"></div>
+                <div class="item3text">
+                    <h6 class="image-project-name info-font light-c"><br>Виртуальный музей</h6>
+                    <p class="image-project-description info-font light-c">Исторический проект, направленный на вовлечение молодёжи в культуру региона</p>
+                </div>
+                <div class="image-project-item item4"><img src="../images/projects/SmotrUlSTU.jpg" alt="Observation deck project"></div>
+                <div class="item4text">
+                    <h6 class="image-project-name-right info-font light-c"><br>Смотровая площадка УлГТУ</h6>
+                    <p class="image-project-description-right info-font light-c">Стартовой точки приключения. Здесь участники знакомятся и обсуждают стратегию и план прохождения игры</p>
+                </div>
+                <div class="info-font middle-c item5text" style="font-size: 35px; text-align: center"><p><br>«Метатория» — это мир, где реальность и фантазия переплетаются!</p></div> 
+            </div>
+        </section>
+
         <section class="event-line">
             <img src="" id="beforeBtn">
             <div class="line-container dark-c">
