--- a/src/index.html
+++ b/src/index.html
@@ -217,9 +217,20 @@
                     <h6 class="image-project-name-right info-font light-c"><br>Смотровая площадка УлГТУ</h6>
                     <p class="image-project-description-right info-font light-c">Стартовой точки приключения. Здесь участники знакомятся и обсуждают стратегию и план прохождения игры</p>
                 </div>
-                <div class="info-font middle-c item5text" style="font-size: 35px; text-align: center"><p><br>«Метатория» — это мир, где реальность и фантазия переплетаются!</p></div> 
+                <!--<div class="info-font middle-c item5text" style="font-size: 35px; text-align: center"><p><br>«Метатория» — это мир, где реальность и фантазия переплетаются!</p></div> -->
             </div>
         </section>
+
+        <section class="Plans">
+            <h6 class="info-font middle-c PlansItem0" style="font-size: 35px">Планы:</h6>
+            <p class="info-font middle-c PlansItem1_1">Участие в международных конкурсах и грантах</p>
+            <div class="PlansItem1_2" width="52" чheight="28"><img src="../images/strelka.png" alt="=>"></div>
+            <p class="info-font middle-c PlansItem2_2">Проведение мастер-классов и конференций для студентов и школьников</p>
+            <div class="PlansItem2_1"><img src="../images/strelka.png" alt="=>"></div>
+            <p class="info-font middle-c PlansItem3_1">Расширение сотрудничества с индустриальными партнерами для создания специализированный Х-пролуктов</p>
+        </section>
+
+        
 
         <section class="event-line">
             <img src="" id="beforeBtn">
@@ -275,6 +286,13 @@
             </div>
             <img src="" id="afterBtn">
         </section>
+
+        <section class="gallery">
+            <div class="parallelogram galleryItem1"><img src="../images/gallery/kids_camp.png" alt="Kids camp"></div>
+            <div class="parallelogram galleryItem2"><img src="../images/gallery/scientific-practical_conference.png" alt="Scientific-practical conference"></div>
+            <div class="parallelogram galleryItem3"><img src="../images/gallery/Testing_the_Metatoria_metaverse.jpg" alt="Testing the Metatoria metaverse"></div>
+        </section>
+        
     </main>
 
     <footer class="contacts-info dark-c">
