--- a/src/index.html
+++ b/src/index.html
@@ -224,9 +224,9 @@
         <section class="Plans">
             <h6 class="info-font middle-c PlansItem0" style="font-size: 35px">Планы:</h6>
             <p class="info-font middle-c PlansItem1_1">Участие в международных конкурсах и грантах</p>
-            <div class="PlansItem1_2" width="52" чheight="28"><img src="../images/strelka.png" alt="=>"></div>
+            <div class="PlansItem1_2" style="width: 60px; height: 120px"><img src="../images/strelka.png" alt="=>"></div>
             <p class="info-font middle-c PlansItem2_2">Проведение мастер-классов и конференций для студентов и школьников</p>
-            <div class="PlansItem2_1"><img src="../images/strelka.png" alt="=>"></div>
+            <div class="PlansItem2_1" style="width: 120px; height: 160px"><img src="../images/strelka.png" alt="=>"></div>
             <p class="info-font middle-c PlansItem3_1">Расширение сотрудничества с индустриальными партнерами для создания специализированный Х-пролуктов</p>
         </section>
 
@@ -288,9 +288,11 @@
         </section>
 
         <section class="gallery">
+            <h6 class="info-font middle-c galleryItem0" style="font-size: 35px">Альбомы:</h6>
             <div class="parallelogram galleryItem1"><img src="../images/gallery/kids_camp.png" alt="Kids camp"></div>
             <div class="parallelogram galleryItem2"><img src="../images/gallery/scientific-practical_conference.png" alt="Scientific-practical conference"></div>
-            <div class="parallelogram galleryItem3"><img src="../images/gallery/Testing_the_Metatoria_metaverse.jpg" alt="Testing the Metatoria metaverse"></div>
+            <div class="parallelogram galleryItem3"><img src="../images/gallery/Testing_the_Metatoria_metaverse.png" alt="Testing the Metatoria metaverse"></div>
+ 
         </section>
         
     </main>
